--- a/config/locales/ua.yml
+++ b/config/locales/ua.yml
@@ -1,4 +1,14 @@
 
 ua:
+  date:
+    abbr_month_names: [~, січня, лютого, березеня, квітеня, травня, червня, липня, серпня, вересня, жовтня, листопада, грудня]
+
+  time:
+    formats:
+      message_time: "%d %b %H:%M:%S"
+
   welcome: "Привіт"
   exit: "Вихід"
+  go_back: "Назад"
+  messages: "Повідомлення"
+  email: "Поштова адреса"
