--- a/config/locales/ua.yml
+++ b/config/locales/ua.yml
@@ -14,6 +14,7 @@ ua:
   email: "Поштова адреса"
   profile: "Профіль"
   sure: "Ви впевнені?"
+  rooms: "Кімнати"
   user_name: "Ім'я користувача"
   age: "Вік"
   country: "Країна"
