finished work with styles and tailwind

--- a/config/locales/ua.yml
+++ b/config/locales/ua.yml
@@ -13,8 +13,10 @@ ua:
   messages: "Повідомлення"
   email: "Поштова адреса"
   profile: "Профіль"
+  create_room: "Створити кімнату"
   sure: "Ви впевнені?"
   rooms: "Кімнати"
+  file: "Файл"
   user_name: "Ім'я користувача"
   age: "Вік"
   country: "Країна"
