--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -12,6 +12,8 @@ en:
     go_back: "Go back"
     room_name: "Room name"
     create: "Create"
+    create_room: "Create room"
+    file: "File"
     rooms: "Rooms"
     messages: "Messages"
     email: "Email"
